# github-action-fastapi

./: README.md  pyproject.toml
app/: main.py  settings.py
tests/: test_status.py
