[tool.poetry]
name = "github-action-fastapi"
version = "0.1.0"
description = ""
authors = ["WaveOfCoding <waveformwstcrz@gmail.com>"]
readme = "README.md"
packages = [{include = "github_action_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
